@@ -1,14 +1,0 @@
-GStreamer is a library that allows the construction of graphs of
-media-handling components, ranging from simple Ogg/Vorbis playback to
-complex audio (mixing) and video (non-linear editing) processing.
-
-Applications can take advantage of advances in codec and filter technology
-transparently.  Developers can add new codecs and filters by writing a
-simple plugin with a clean, generic interface.
-
-GStreamer is released under the LGPL.
-
-This package is part of the 'base' plugins for GStreamer.  It provides the
-gio plugin for GStreamer, which allows file access through the glib
-gio abstraction layer.  This means that it can open files using any of the
-methods supported by the glib gio library.
